test/custom/elaboration/bad/typeclass_no_superclass.mle
class K 'a { k : 'a }
class K 'a => L 'a { l : 'a }

instance L int { l = 0 }
